// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClassLinks should not render links for non-admin 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <span>
    Hi
  </span>
</div>
`;

exports[`ClassLinks should render with full props 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <a
    className="cursor-pointer nice-btn-alt icon fa-eye"
    href={undefined}
    onClick={[Function]}
  >
    View
  </a>
  <a
    className="cursor-pointer nice-btn-alt icon fa-pencil"
    href={undefined}
    onClick={[Function]}
  >
    Edit
  </a>
  <span>
    Hi
  </span>
</div>
`;

exports[`ClassLinks should render with minimum props 1`] = `null`;

exports[`ClassLinks should render without current full props 1`] = `
<div
  className="base-link-group nice-btn-group"
>
  <a
    className="cursor-pointer nice-btn-alt icon fa-plus"
    href={undefined}
    onClick={[Function]}
  >
    New
  </a>
  <span>
    Hi
  </span>
</div>
`;
